Fixing UI issue and improving privacy.

--- a/frontend/src/pages/swap/index.css
+++ b/frontend/src/pages/swap/index.css
@@ -18,6 +18,10 @@
   box-shadow: var(--shadow-color) 0px 54px 55px, var(--shadow-color) 0px -12px 30px, var(--shadow-color) 0px 4px 6px, var(--shadow-color) 0px 12px 13px, var(--shadow-color) 0px -3px 5px;
 }
 
+.icon-onion {
+  width: 20px;
+}
+
 .box {
   width: 90%;
   display: flex;
